# -CppND-Capstone-Project

./: CMakeLists.txt  README.md
data/: cnnResult1.csv  cnnResult10.xlsx  cnnResult2.xlsx
inc/: cnn.hpp  dataset.hpp  defines.hpp  imgproc.hpp  layer.hpp  matrix.hpp  matrix3d.hpp  queue.hpp
src/: cnn.cpp  dataset.cpp  layer.cpp  main.cpp  matrix.cpp  matrix3d.cpp
